--- a/burger-queen/src/index.html
+++ b/burger-queen/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Slackey&display=swap" rel="stylesheet">
   <meta charset="utf-8">
-  <title>BurgesQueen</title>
+  <title>Burger Queen</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
